@@ -1,3 +1,6 @@
+2017-01-01 (0.12.9)
+	ANDROID: select alternative font
+
 2016-12-31 (0.12.9)
 	UI: show unsaved indicator following paste
 
